(library
 (name iter)
 (public_name iter)
 (wrapped false)
 (modules Iter IterLabels)
 (flags :standard -w +a-102 -warn-error -a+8 -nolabels)
 (modes :standard melange))

(env
 (_
  (flags :standard -w +a-102 -warn-error -a+8)
  (ocamlopt_flags :standard -O3 -unbox-closures -unbox-closures-factor 20)))
